@@ -8,6 +8,11 @@ Changelog for 1.3.12
 * Corrected erroneous log messages from debugging 1.3.11 (Chris T)
 * Autocomplete ajaxselect now work (degraded) without Javascript (Chris T)
 * Autocomplete ajaxselect now accept full entry without waiting (Chris T)
+* Inlined add_custom_field's argument names for autodocumentation (Chris T)
+* Updated add_custom_field to run on PostgreSQL 9.0 (Chris T)
+* Updated dists/rpm/build.sh to support RHEL 5 (Hilton D)
+
+Hilton D is Hilton Day
 
 Changelog for 1.3.11
 * Fixed outstanding report for payment reversal and partial payments (Chris T)
